# kalkulators

./: CMakeLists.txt  README.md  kalkulators.ui  main.cpp  mainWindow.cpp  mainWindow.h
